    Net::DNS::RR->new_from_data() whenever called with the appropriate
    combination of arguments. That (undocumented) behavior has been depricated.
    Use Net::DNS::RR->new_from_data() directly if you depended ont that.

Feature: Net::DNS::Packets unique_push now ignores the TTL in
    comparisson of uniqueness, this is closer to the intend of
    RFC2181, but not yet fully complient.

Fix rt.cpan.org #31042
    Makefile corrected to add a library target.

Fix rt.cpan.org #29877
    Made 00-version.t recognize a "GIT" environment.


Fix rt.cpan.org #29878

    SPF.pm did not evaluate as true. Thanks Bjorn Hansen.

Fix various tests so they are more robust (Ask Bjoern Hansen)

Fix rt.cpan.org #29531
   Nameserver.pm, Packet.pm and Question.pm modified to avoid erroneous PTR
   lookup in response to mischievous query packet containing an IP address.


Fix rt.cpan.org #27970 better netdns.o

    Marek Rouchal provided two minor improvements for linking the C
    code sniplets


Fix rt.cpan 28345

    A fix in Test::Simple revealed an off by 1 error in the testplan
    for 05-rr-rrsort.t. The fix is to remove a test, creating a dependency
    on Test::Simple 0.71 seemed overkill.



*** 0.61, 1 August 2007

Fix rt.cpan.org #28106, 28198, and 28590
    Modification of $_ in various places.  

Fix
    t/11-inet6 assumed lowercase domain names.

*** 0.60 20 June 2007

Fix spelling mistakes in change log using interactive spell checker (aspell).

Fix
    Two redundant calls of $self->rdatastr() in Net::DNS::RR::string().

Fix rt.cpan.org #27285 bis
    Unreleased 0.59_1 dn_expand_PP() has security flaw allowing access to
    arbitrary data using crafted packet with out of range compression pointer.
    Patch by Dick Franks based on 0.59 code. 

Fix rt.cpan.org #27391
    dn_compress() produces corrupt packet for name containing empty label.

Fix rt.cpan.org #26957
    dn_compress() croaks for name having label which exceeds 63 characters.